syntax = "proto3";

package compiler;

service Compiler {
    rpc getCountFolder (getCountFolderReq) returns (getCountFolderRes) {};
    rpc clearFolder (getCountFolderReq) returns (clearFolderRes) {};
    rpc getTestcasesOfProblem (getTestcasesOfProblemReq) returns (getTestcasesOfProblemRes) {};
    rpc deleteSubmissionFolderByUUID (deleteUUIDReq) returns (EmptyRes) {};
    rpc deleteSubmissionFolderByProblemUUID (deleteUUIDReq) returns (EmptyRes) {};
    rpc deleteProblemFolderByUUID (deleteUUIDReq) returns (EmptyRes) {};
}

message EmptyRes {}
  
message getTestcasesOfProblemReq {
    string requestId = 1;
    string problemUuid = 2;
    string problemAuthorId = 3;
}
  
message getTestcasesOfProblemRes {
    string testcases = 1;
}

message getCountFolderReq {
    string requestId = 1;
    string folder = 2;
    string dataArr = 3;
    string dataUser = 4;
}

message getCountFolderRes {
    int32 count = 1;
    int32 total = 2;
}

message deleteUUIDReq {
    string requestId = 1;
    string uuid = 2;
}

message clearFolderRes {
    int32 length = 1;
}